[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui_elements/menu_character.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui_elements/assets/themes/suspect_ui.tres" type="Theme" id=2]
[ext_resource path="res://ui_elements/appearance/appearance_editor.gd" type="Script" id=3]
[ext_resource path="res://ui_elements/assets/themes/hidden.tres" type="Theme" id=5]
[ext_resource path="res://ui_elements/appearance/save_popup.gd" type="Script" id=6]

[node name="AppearanceEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="MenuMargin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MenuMargin"]
margin_left = 32.0
margin_top = 32.0
margin_right = 1888.0
margin_bottom = 1048.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterBox" type="VBoxContainer" parent="MenuMargin/HBoxContainer"]
margin_right = 496.0
margin_bottom = 1016.0
size_flags_horizontal = 3

[node name="CenterCharacter" type="CenterContainer" parent="MenuMargin/HBoxContainer/CharacterBox"]
margin_right = 496.0
margin_bottom = 676.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MenuCharacter" parent="MenuMargin/HBoxContainer/CharacterBox/CenterCharacter" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 18.0
margin_right = 476.0
margin_bottom = 658.0
rect_min_size = Vector2( 456, 640 )
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="Random" type="Button" parent="MenuMargin/HBoxContainer/CharacterBox/CenterCharacter/MenuCharacter"]
margin_right = 456.0
margin_bottom = 640.0
hint_tooltip = "Randomise your appearance!"
theme = ExtResource( 5 )

[node name="ButtonMargin" type="MarginContainer" parent="MenuMargin/HBoxContainer/CharacterBox"]
margin_top = 692.0
margin_right = 496.0
margin_bottom = 1016.0
custom_constants/margin_right = 32

[node name="Buttons" type="VBoxContainer" parent="MenuMargin/HBoxContainer/CharacterBox/ButtonMargin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 464.0
margin_bottom = 304.0
size_flags_horizontal = 5
size_flags_vertical = 4
theme = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="MenuMargin/HBoxContainer/CharacterBox/ButtonMargin/Buttons"]
margin_right = 444.0
margin_bottom = 84.0

[node name="Save" type="Button" parent="MenuMargin/HBoxContainer/CharacterBox/ButtonMargin/Buttons/HBoxContainer"]
margin_right = 444.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Save this outfit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Closet" type="Button" parent="MenuMargin/HBoxContainer/CharacterBox/ButtonMargin/Buttons"]
margin_top = 100.0
margin_right = 444.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Open my Closet"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="MenuMargin/HBoxContainer/CharacterBox/ButtonMargin/Buttons"]
margin_top = 200.0
margin_right = 444.0
margin_bottom = 284.0
theme = ExtResource( 2 )
text = "Back"

[node name="TabBox" type="VBoxContainer" parent="MenuMargin/HBoxContainer"]
margin_left = 512.0
margin_right = 1856.0
margin_bottom = 1016.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelCenter" type="CenterContainer" parent="MenuMargin/HBoxContainer/TabBox"]
margin_right = 1344.0
margin_bottom = 74.0

[node name="Label" type="Label" parent="MenuMargin/HBoxContainer/TabBox/LabelCenter"]
margin_left = 500.0
margin_right = 844.0
margin_bottom = 74.0
theme = ExtResource( 2 )
text = "Appearance Menu"

[node name="TabContainer" type="TabContainer" parent="MenuMargin/HBoxContainer/TabBox"]
margin_top = 90.0
margin_right = 1344.0
margin_bottom = 1016.0
rect_min_size = Vector2( 1344, 0 )
size_flags_vertical = 3
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Darken" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.454902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SavePopup" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 138.0
margin_bottom = 156.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="SavePopup"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1090.0
margin_bottom = 688.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="SavePopup/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1062.0
margin_bottom = 660.0

[node name="MenuCharacter" parent="SavePopup/MarginContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 526.0
margin_bottom = 640.0
rect_min_size = Vector2( 526, 640 )

[node name="Center" type="CenterContainer" parent="SavePopup/MarginContainer/HBoxContainer"]
margin_left = 542.0
margin_right = 1042.0
margin_bottom = 640.0

[node name="VBox" type="VBoxContainer" parent="SavePopup/MarginContainer/HBoxContainer/Center"]
margin_top = 180.0
margin_right = 500.0
margin_bottom = 460.0
rect_min_size = Vector2( 500, 0 )

[node name="Label" type="Label" parent="SavePopup/MarginContainer/HBoxContainer/Center/VBox"]
margin_right = 500.0
margin_bottom = 74.0
text = "Save Your Outfit:"

[node name="Name" type="LineEdit" parent="SavePopup/MarginContainer/HBoxContainer/Center/VBox"]
margin_top = 90.0
margin_right = 500.0
margin_bottom = 180.0
placeholder_text = "Outfit Name"

[node name="HBox" type="HBoxContainer" parent="SavePopup/MarginContainer/HBoxContainer/Center/VBox"]
margin_top = 196.0
margin_right = 500.0
margin_bottom = 280.0

[node name="Save" type="Button" parent="SavePopup/MarginContainer/HBoxContainer/Center/VBox/HBox"]
margin_right = 242.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="SavePopup/MarginContainer/HBoxContainer/Center/VBox/HBox"]
margin_left = 258.0
margin_right = 500.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RandomConfirm" type="PopupPanel" parent="."]
margin_right = 838.0
margin_bottom = 330.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="RandomConfirm"]
margin_left = 8.0
margin_top = 8.0
margin_right = 830.0
margin_bottom = 322.0

[node name="VBoxContainer" type="VBoxContainer" parent="RandomConfirm/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 802.0
margin_bottom = 294.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RandomConfirm/MarginContainer/VBoxContainer"]
margin_right = 782.0
margin_bottom = 74.0
text = "Generate a new appearance?"

[node name="Confirm" type="Button" parent="RandomConfirm/MarginContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 782.0
margin_bottom = 174.0
text = "Confirm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="RandomConfirm/MarginContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 782.0
margin_bottom = 274.0
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="MenuMargin/HBoxContainer/CharacterBox/CenterCharacter/MenuCharacter/Random" to="." method="_on_Character_mouse_entered"]
[connection signal="mouse_exited" from="MenuMargin/HBoxContainer/CharacterBox/CenterCharacter/MenuCharacter/Random" to="." method="_on_Character_mouse_exited"]
[connection signal="pressed" from="MenuMargin/HBoxContainer/CharacterBox/CenterCharacter/MenuCharacter/Random" to="." method="_on_Random_pressed"]
[connection signal="pressed" from="MenuMargin/HBoxContainer/CharacterBox/ButtonMargin/Buttons/HBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="MenuMargin/HBoxContainer/CharacterBox/ButtonMargin/Buttons/Closet" to="." method="_on_Closet_pressed"]
[connection signal="pressed" from="MenuMargin/HBoxContainer/CharacterBox/ButtonMargin/Buttons/Back" to="." method="_on_Back_pressed"]
[connection signal="tab_changed" from="MenuMargin/HBoxContainer/TabBox/TabContainer" to="." method="_on_tab_changed"]
[connection signal="popup_hide" from="SavePopup" to="." method="_on_Popup_hide"]
[connection signal="text_entered" from="SavePopup/MarginContainer/HBoxContainer/Center/VBox/Name" to="SavePopup" method="_on_Name_text_entered"]
[connection signal="pressed" from="SavePopup/MarginContainer/HBoxContainer/Center/VBox/HBox/Save" to="SavePopup" method="_on_Save_pressed"]
[connection signal="pressed" from="SavePopup/MarginContainer/HBoxContainer/Center/VBox/HBox/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="RandomConfirm/MarginContainer/VBoxContainer/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="RandomConfirm/MarginContainer/VBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
